Implement searching authors by their competences
